README.md updated\n\nApp's name displayed in the middle of the HomeScreen

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,6 +9,9 @@
         <variable
             name="viewModel"
             type="MainViewModel" />
+        <variable
+            name="appName"
+            type="String" />
     </data>
 
 
@@ -33,6 +36,16 @@
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
+
+        <TextView
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@{appName}"
+            android:textSize="20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     
